--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "@syncfusion/ej2": "^18.2.57",
+    "@syncfusion/ej2-base": "^18.2.57",
+    "@syncfusion/ej2-calendars": "^18.2.56",
     "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "popper.js": "^1.16.1",
